<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sooner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_password"><u>Forgot Password </u> </string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean \n commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,</string>
    <string name="more_options"><u>More options</u></string>
    <string name="Note"> Note: Appointment is at <b>2hrs</b>from now.</string>
    <string name="spLocation">Select Location</string>
    <string name="spSpecialty">Select Speciality</string>
    <string name="spPhysician">Select Physician</string>
    <string name="time">Preferred Time</string>
    <string name="total_request"><u>View earlier requests</u>: (4)</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="rescheduling_alerts">Rescheduling Alert</string>
    <string name="appointment_is_at">Note: Appointment is at</string>
    <string name="view_potential_conflicts">View Potential Conflicts</string>
    <string name="special_offer">Special Offer</string>
    <string name="gift_help_text">Upon acceptance, you will be eligible for :</string>
    <string name="decline">Decline</string>
    <string name="view_all">View all</string>
    <string name="accept">Accept</string>
    <string name="no_alert_message">Currently you dont have any Alerts.</string>
    <string name="enter_password">Enter your new  password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="add_insurance">Add Insurance</string>
    <string name="upload_capture_insurance_card">You can upload or capture image of insurance card.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="dashbord">Dashboard</string>
    <string name="req_app">Request Appt</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms_Conditions">Accept terms and conditions</string>
    <string name="login">Log in</string>
   	<string name="website">www.sooner.io</string>
   	<string name="no_events">No Events</string>
   	<string name="future_appointments">Future Appointments</string>
    <string name="no_future_appointments">-- No future Appointments --</string>
   	<string name="your_appointment_is_on">Your appointment is on </string>
    <string name="your_appointment_vary">Note: Your appointment may vary by 15 to 20 min.</string>
    <string name="appointment_starts">Appointment starts in :</string>
    <string name="select_facility">Select Facility</string>
    <string name="search_facilities"><font size="10">Search Facilities</font></string>
    <string name="selected_facility">Selected Facility</string>
    <string name="faclity_text">All appointments related to the selected facility will appear throughout the app</string>
    <string name="no_apt_found">No Appointments Found</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="click_to_schedule_appt">Click below options to\nschedule an Appointment.</string>
    <string name="request_appt">Request an Appointment</string>
    <string name="requested_appt">Requested Appointments</string>
    <string name="rescheduling_options">Rescheduling Options</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
    <string name="agree">I Agree</string>
    <string name="discard">Decline</string>
    <string name="termsConditions">Terms And Conditions</string>
    <string name="conflict">"Conflict - "</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="back_image_description">navigates to back screen</string>
    <string name="home_button">home navigation</string>
    <string name="doctor_image">doctor image</string>

    <string-array name="city">
        <item>Select Location</item>
        <item>SSH - North Seattle</item>
        <item>SSH - Kirkland</item>
        <item>SSH - Downtown Seattle</item>
    </string-array>
    <string-array name="hospital">
        <item>Select Specialty</item>
        <item>Snoring</item>
        <item>Sleep apnea</item>
        <item>Insomnia</item>
    </string-array>
    <string-array name="speciality">
        <item>Select Physician</item>
        <item>Dr. Mazeika</item>
        <item>Dr. James</item>
        <item>Dr. Fillmore</item>
    </string-array>
    <string-array name="time">
        <item>Preferred Time</item>
        <item>Immediately</item>
        <item>Any Time - Next Week</item>
        <item>Any Time - Next Month</item>
    </string-array>

</resources>