<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/forgot_password_barder"
                android:orientation="vertical"
                android:padding="@dimen/padding_small"
                android:layout_margin="@dimen/padding_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_small"
                    android:text="@string/enter_password"
                    android:textColor="@color/new_selected"
                    android:textSize="@dimen/text_size_xxlarge"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_xxsmall"
                    android:background="@drawable/login_using_border"
                    android:cursorVisible="true"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/padding_xxsmall"
                    android:hint="@string/current_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding_small"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_large"
                    />

                <EditText
                    android:id="@+id/etNwPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_xxsmall"
                    android:background="@drawable/login_using_border"
                    android:cursorVisible="true"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/padding_xxsmall"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding_small"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_large"
                    />

                <EditText
                    android:id="@+id/etCnPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_xxsmall"
                    android:background="@drawable/login_using_border"
                    android:cursorVisible="true"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/padding_xxsmall"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding_small"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_large"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_standard"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_xxxsmall"
                        android:layout_marginLeft="@dimen/padding_standard"
                        android:background="@drawable/new_green_button_selector"
                        android:onClick="btnSubmit"
                        android:paddingBottom="@dimen/padding_xxsmall"
                        android:paddingLeft="@dimen/padding_xxxlarge"
                        android:paddingRight="@dimen/padding_xxxlarge"
                        android:paddingTop="@dimen/padding_xxsmall"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_large" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_xxxsmall"
                        android:background="@drawable/new_green_button_selector"
                        android:onClick="btnCancel"
                        android:paddingBottom="@dimen/padding_xxsmall"
                        android:paddingLeft="@dimen/padding_xxxlarge"
                        android:paddingRight="@dimen/padding_xxxlarge"
                        android:paddingTop="@dimen/padding_xxsmall"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_large" />
                </LinearLayout>
            </LinearLayout>


</LinearLayout>