<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/liMainScreen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
  >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:src="@drawable/main_logo"
            android:id="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/ten"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/padding_small"
        android:layout_marginLeft="@dimen/padding_standard"
        android:layout_marginRight="@dimen/padding_standard"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbarThumbVertical="@android:color/transparent">

    <LinearLayout
        android:id="@+id/liLoginDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="@dimen/twohundredfifty"
            android:layout_height="@dimen/twohundred"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/twentyfive"
            android:src="@mipmap/login_screen_logo"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_xxsmall" >

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_using_border"
                android:cursorVisible="true"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="@dimen/padding_xxsmall"
                android:hint="@string/email"
                android:textColorHint="@color/grey"
                android:textColor="@color/new_selected"
                android:inputType="text"
                android:padding="@dimen/padding_small"
                android:singleLine="true"
                android:textSize="@dimen/text_size_large" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_xxsmall"
                android:background="@drawable/login_using_border"
                android:cursorVisible="true"
                android:drawableLeft="@drawable/password"
                android:textColorHint="@color/grey"
                android:drawablePadding="@dimen/padding_xxsmall"
                android:textColor="@color/new_selected"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/padding_small"
                android:singleLine="true"
                android:textSize="@dimen/text_size_large"
                android:typeface="normal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="termsConditions">
            <CheckBox
                android:id="@+id/cbTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginTop="@dimen/padding_xxsmall"
                android:text="@string/terms_Conditions"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/new_selected"/>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_xxsmall"
                style="?attr/selectableItemBackground"
                android:background="@drawable/new_green_button_selector"
                android:onClick="btnLogin"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_xxsmall"
                android:clickable="true"
                android:onClick="tvForgotPassword"
                android:padding="@dimen/padding_small"
                android:text="@string/forgot_password"
                android:textColor="@color/new_selected"
                android:textSize="@dimen/text_size_large" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
  

</LinearLayout>