<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvReschedulingalerts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:clickable="true"
            android:padding="@dimen/ten"
            android:text="@string/termsConditions"
            android:singleLine="true"
            android:textColor="@color/new_selected"
            android:textSize="@dimen/text_size_xxlarge"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/green_stroke"
        android:padding="@dimen/padding_small"
        android:layout_marginLeft="@dimen/padding_small"
        android:layout_marginRight="@dimen/padding_small">
      <WebView
        android:id="@+id/wvTermsAndConditions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
       </WebView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <Button
            android:id="@+id/btnCancel"
            android:background="@drawable/red_btnbackground_selector"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:text="@string/discard"
            android:layout_marginLeft="@dimen/padding_small"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginBottom="@dimen/padding_small"
            android:layout_marginRight="@dimen/padding_xxsmall"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:onClick="cancel"
            android:textSize="@dimen/text_size_large"/>

        <Button
            android:id="@+id/btnAgree"
            android:background="@drawable/new_green_button_selector"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/btnCancel"
            android:layout_weight="1"
            android:text="@string/agree"
            android:textAllCaps="false"
            android:layout_marginLeft="@dimen/padding_xxsmall"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginBottom="@dimen/padding_small"
            android:layout_marginRight="@dimen/padding_small"
            android:textColor="@color/white"
            android:onClick="agree"
            android:textSize="@dimen/text_size_large"/>

    </LinearLayout>


</LinearLayout>