<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/liMainView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_xxsmall"
                android:layout_marginTop="@dimen/padding_large"
                android:background="@color/white"
                android:gravity="center_horizontal"
                android:text="@string/select_facility"
                android:textColor="@color/new_selected"
                android:textSize="@dimen/text_size_xxxlarge"
                android:textStyle="bold" />

            <SearchView
                android:id="@+id/svFacilityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:background="@drawable/search_facility_background"
                android:ems="10"
                android:hint="@string/search_facilities"
                android:queryBackground="@android:color/transparent"
                android:textColor="@color/new_selected"
                android:textSize="@dimen/text_size_small"
                android:iconifiedByDefault="false"
                ></SearchView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_small"
                android:background="@drawable/green_stroke"
                android:paddingBottom="@dimen/padding_xxsmall"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_small"
                android:paddingTop="@dimen/padding_xxsmall"

                >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/selected_facility" />

                <TextView
                    android:id="@+id/tvSelectedFacilityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/select_facility"
                    android:textColor="@color/new_selected"
                    android:textSize="@dimen/text_size_standard" />
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rvFacilityList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbars="vertical"
                android:visibility="visible"
                tools:context=".FragmentFacility" />

            <TextView
                android:id="@+id/tvEmptyView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textSize="@dimen/text_size_large"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_standard"
                android:layout_marginLeft="@dimen/padding_small"
                android:layout_marginRight="@dimen/padding_small"
                android:layout_marginTop="@dimen/padding_small"
                android:gravity="center_horizontal"
                android:text="@string/faclity_text"
                android:visibility="visible" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>