<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/liLandingscreen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:src="@drawable/main_logo"
                android:id="@+id/imageView"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/ten"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/padding_xlarge"
                android:src="@drawable/bell"
                android:layout_marginRight="29dp"
                android:layout_marginEnd="29dp"
                android:id="@+id/imageView2"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:onClick="rlAlert"
                android:layout_alignParentEnd="true" />

            <TextView

                android:background="@drawable/ticker_background"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_width="@dimen/padding_xlarge"
                android:layout_height="@dimen/padding_xlarge"
                android:id="@+id/tvTicker"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="@dimen/padding_xxsmall"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/text_size_xsmall"
                android:layout_alignLeft="@+id/imageView2"
                android:layout_alignStart="@+id/imageView2"
                android:visibility="gone"/>
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/flContainer"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/llBottomLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/new_not_selected"
            android:orientation="horizontal"
            android:weightSum="4" >

            <LinearLayout
                android:id="@+id/liDash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="liDash"
                android:orientation="vertical"
                android:padding="@dimen/padding_small">

                <ImageView
                    android:id="@+id/ivdashboard"
                    android:layout_width="@dimen/padding_xxlarge"
                    android:layout_height="@dimen/padding_xxlarge"
                    android:layout_gravity="center"
                    android:src="@drawable/d_n" />

                <TextView
                    android:id="@+id/tvDashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/dashbord"
                    android:textColor="@color/grey"
                    android:layout_marginTop="@dimen/padding_xxsmall"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginBottom="@dimen/padding_small"
                android:background="@color/grey_light"
                />
            <LinearLayout
                android:id="@+id/liReq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:onClick="liReq"
                android:orientation="vertical"
                android:padding="@dimen/padding_small">

                <ImageView
                    android:id="@+id/ivRequestappointment"
                    android:layout_width="@dimen/padding_xxlarge"
                    android:layout_height="@dimen/padding_xxlarge"
                    android:layout_gravity="center"
                    android:src="@drawable/ra_n"
                    android:padding="@dimen/padding_xxxsmall"/>

                <TextView
                    android:id="@+id/tvRequestappointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/req_app"
                    android:textColor="@color/grey"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/padding_xxsmall"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginBottom="@dimen/padding_small"
                android:background="@color/grey_light"
                />
            <LinearLayout
                android:id="@+id/liFacility"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:onClick="liFacility"
                android:orientation="vertical"
                android:padding="@dimen/padding_small">

                <ImageView
                    android:id="@+id/ivfacility"
                    android:layout_width="@dimen/padding_xxlarge"
                    android:layout_height="@dimen/padding_xxlarge"
                    android:layout_gravity="center"
                    android:src="@drawable/settings_n" />

                <TextView
                    android:id="@+id/tvfacility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/settings"
                    android:textColor="@color/grey"
                    android:layout_marginTop="@dimen/padding_xxsmall"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginBottom="@dimen/padding_small"
                android:background="@color/grey_light"
                />
            <LinearLayout
                android:id="@+id/liProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:onClick="liProfile"
                android:orientation="vertical"
                android:padding="@dimen/padding_small"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/ivprofile"
                    android:layout_width="@dimen/padding_xxlarge"
                    android:layout_height="@dimen/padding_xxlarge"
                    android:layout_gravity="center"
                    android:src="@drawable/p_n"
                    android:padding="@dimen/padding_xxxsmall"/>

                <TextView
                    android:id="@+id/tvProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/profile"
                    android:textColor="@color/grey"
                    android:layout_marginTop="@dimen/padding_xxsmall"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>